# stonex_mc

./: .gitattributes  .gitignore  build.gradle  et --hard a540f3cf  gradle.properties  local.properties  settings.gradle
app/: .gitignore  build.gradle  platform.keystore
app/gen1/release/: output-metadata.json
app/gen2/release/: output-metadata.json
app/libs/: can-debug.aar  cpbase.v2.0.4.2.aar  cpcomm.v2.0.4.2.aar  cpsdk.cpbase.v2.0.2.aar  cpsdk.cpbase.v2.0.4.6.aar  cpsdk.cpcomm.v2.0.2.1.aar  cpsdk.cpcomm.v2.0.4.6.aar  cpsdk.cpcomm.v2.0.5.3.aar  cpsdk.cpmedia.v2.0.5.4.aar  cpsdk.cputils.v2.0.1.aar  cpsdk.cputils.v2.0.4.6.aar  cputils.v1.0.1.aar
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/PythonTest/: creazione_eseguibile.txt  stx_hole_converter.py  stx_hole_converter.spec
app/src/main/assets/: Can_3rdParts.xlsx  DEUTSCH_GEOID.GGF  EST-GEOID2017.UGF  Greece_GEOID2015_v2016.ugf  Jet_Template.ird  Jet_Template.xlsx  Komatsu_Can.xlsx  RIGA20.UGF  Solar_Template.xlsx  belgium_hbg18.ugf  dE_2km_V1-0.grd  dN_2km_V1-0.grd  greece_2km_v1_0.gsb  nlgeo2018.ugf  table_yx_3_v1202_Q1.gsb  table_yx_3_v1202_Q3.gsb  table_yx_3_v1710_Q1.gsb  table_yx_3_v1710_Q3.gsb
app/src/main/cpp/: CMakeLists.txt  native_czech_proj.cpp  native_proj.cpp
app/src/main/cpp/include/: proj.h
app/src/main/danfoss/: 70112531v170.SYS  Dozer_Simul.p1m  Dozer_Simul.p1x  MC024_130_nl_T.scs  ProjectParameters.json  st.p1d
app/src/main/dozer_grader/: DOZER_GRADER_v_410.lhx  MC024_130_nl_T.scs  ProjectParameters.json  dozer_grader.p1m  dozer_grader.p1x
app/src/main/grade_firmware/: GRADE.p1m  GRADE.p1x  MC024_130_nl_T.scs
app/src/main/universal_piledriver/: 70123519v170.SYS  Dioba.lhx  MC024_130_132lgT.scs  PILE_DRIV_PIEDE.lhx  Piantapalo_Ritardo_Martello.lhx  PorcaMer.lhx  ProjectParameters.json  Pçroporzionalità.lhx  UNIVERSAL_PILEDRIVER_Piede_OK.lhx  (+7 more)
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: README.txt  SDK.docx  build.gradle
(+1689 files in other folders)
